// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Team service endpoint returns a team when the team has components and the components have cross functional requirements renders the details of the cross functional requirements 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    
    Test Team Name 1 Team - Cross Functional Requirements
  
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1"
      target="_self"
    >
      Info
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/dependencies"
      target="_self"
    >
      Dependencies
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/components"
      target="_self"
    >
      Components
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/tech-debts"
      target="_self"
    >
      Tech Debts
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/tests"
      target="_self"
    >
      Tests
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/errors"
      target="_self"
    >
      Errors
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/openapi-specs"
      target="_self"
    >
      OpenAPI Specs
    </a>
  </div>
   
  <div>
    <div
      class="mt-3 mb-4"
    >
      <button
        aria-controls="filters"
        aria-expanded="false"
        class="btn btn-secondary collapsed"
        id="toggle-filters"
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="blank"
          class="bi-blank b-icon bi"
          fill="currentColor"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g />
        </svg>
         Filters
  
      </button>
       
      <transition-stub
        class="mt-3"
        css="true"
        enteractiveclass="collapsing"
        enterclass=""
        entertoclass="collapse show"
        leaveactiveclass="collapsing"
        leaveclass="collapse show"
        leavetoclass="collapse"
      >
        <div
          class="collapse"
          id="filters"
          style="display: none;"
        >
          <div
            class="card-columns"
          >
             
            <!---->
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <p
                  class="card-text"
                >
                  <fieldset
                    class="form-group"
                    id="__BVID__95"
                  >
                    <legend
                      class="bv-no-focus-ring col-form-label pt-0"
                      id="__BVID__95__BV_label_"
                      tabindex="-1"
                    >
                      Teams
                    </legend>
                    <div>
                      <div
                        class="bv-no-focus-ring"
                        id="__BVID__96"
                        role="group"
                        tabindex="-1"
                      >
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__96_BV_option_0"
                            name="team"
                            type="checkbox"
                            value="test-team-id-1-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__96_BV_option_0"
                          >
                            <span>
                              test-team-id-1-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__96_BV_option_1"
                            name="team"
                            type="checkbox"
                            value="test-team-id-1-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__96_BV_option_1"
                          >
                            <span>
                              test-team-id-1-2
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__96_BV_option_2"
                            name="team"
                            type="checkbox"
                            value="test-team-id-2-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__96_BV_option_2"
                          >
                            <span>
                              test-team-id-2-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__96_BV_option_3"
                            name="team"
                            type="checkbox"
                            value="test-team-id-2-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__96_BV_option_3"
                          >
                            <span>
                              test-team-id-2-2
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__96_BV_option_4"
                            name="team"
                            type="checkbox"
                            value="test-team-id-3-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__96_BV_option_4"
                          >
                            <span>
                              test-team-id-3-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__96_BV_option_5"
                            name="team"
                            type="checkbox"
                            value="test-team-id-3-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__96_BV_option_5"
                          >
                            <span>
                              test-team-id-3-2
                            </span>
                          </label>
                        </div>
                      </div>
                      <!---->
                      <!---->
                      <!---->
                    </div>
                  </fieldset>
                </p>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <p
                  class="card-text"
                >
                  <fieldset
                    class="form-group"
                    id="__BVID__103"
                  >
                    <legend
                      class="bv-no-focus-ring col-form-label pt-0"
                      id="__BVID__103__BV_label_"
                      tabindex="-1"
                    >
                      Tags
                    </legend>
                    <div>
                      <div
                        class="bv-no-focus-ring"
                        id="__BVID__104"
                        role="group"
                        tabindex="-1"
                      >
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__104_BV_option_0"
                            name="tag"
                            type="checkbox"
                            value="test-tag-1-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__104_BV_option_0"
                          >
                            <span>
                              test-tag-1-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__104_BV_option_1"
                            name="tag"
                            type="checkbox"
                            value="test-tag-1-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__104_BV_option_1"
                          >
                            <span>
                              test-tag-1-2
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__104_BV_option_2"
                            name="tag"
                            type="checkbox"
                            value="test-tag-2-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__104_BV_option_2"
                          >
                            <span>
                              test-tag-2-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__104_BV_option_3"
                            name="tag"
                            type="checkbox"
                            value="test-tag-2-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__104_BV_option_3"
                          >
                            <span>
                              test-tag-2-2
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__104_BV_option_4"
                            name="tag"
                            type="checkbox"
                            value="test-tag-3-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__104_BV_option_4"
                          >
                            <span>
                              test-tag-3-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__104_BV_option_5"
                            name="tag"
                            type="checkbox"
                            value="test-tag-3-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__104_BV_option_5"
                          >
                            <span>
                              test-tag-3-2
                            </span>
                          </label>
                        </div>
                      </div>
                      <!---->
                      <!---->
                      <!---->
                    </div>
                  </fieldset>
                </p>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <p
                  class="card-text"
                >
                  <fieldset
                    class="form-group"
                    id="__BVID__111"
                  >
                    <legend
                      class="bv-no-focus-ring col-form-label pt-0"
                      id="__BVID__111__BV_label_"
                      tabindex="-1"
                    >
                      Component Types
                    </legend>
                    <div>
                      <div
                        class="bv-no-focus-ring"
                        id="__BVID__112"
                        role="group"
                        tabindex="-1"
                      >
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__112_BV_option_0"
                            name="componentTypeId"
                            type="checkbox"
                            value="test-component-type-id-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__112_BV_option_0"
                          >
                            <span>
                              test-component-type-id-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__112_BV_option_1"
                            name="componentTypeId"
                            type="checkbox"
                            value="test-component-type-id-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__112_BV_option_1"
                          >
                            <span>
                              test-component-type-id-2
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__112_BV_option_2"
                            name="componentTypeId"
                            type="checkbox"
                            value="test-component-type-id-3"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__112_BV_option_2"
                          >
                            <span>
                              test-component-type-id-3
                            </span>
                          </label>
                        </div>
                      </div>
                      <!---->
                      <!---->
                      <!---->
                    </div>
                  </fieldset>
                </p>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <p
                  class="card-text"
                >
                  <fieldset
                    class="form-group"
                    id="__BVID__116"
                  >
                    <legend
                      class="bv-no-focus-ring col-form-label pt-0"
                      id="__BVID__116__BV_label_"
                      tabindex="-1"
                    >
                      Platforms
                    </legend>
                    <div>
                      <div
                        class="bv-no-focus-ring"
                        id="__BVID__117"
                        role="group"
                        tabindex="-1"
                      >
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__117_BV_option_0"
                            name="platformId"
                            type="checkbox"
                            value="undefined"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__117_BV_option_0"
                          >
                            <span>
                              undefined
                            </span>
                          </label>
                        </div>
                      </div>
                      <!---->
                      <!---->
                      <!---->
                    </div>
                  </fieldset>
                </p>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <p
                  class="card-text"
                >
                  <div
                    class="form-group"
                    id="__BVID__119"
                    role="group"
                  >
                    <label
                      class="d-block"
                      for="component-filter"
                      id="__BVID__119__BV_label_"
                    >
                      Component
                    </label>
                    <div>
                      <select
                        class="custom-select custom-select-sm"
                        id="component-filter"
                      >
                        <option
                          value=""
                        >
                          Please select a component
                        </option>
                        <option
                          value="test-component-id-1"
                        >
                          test-component-id-1
                        </option>
                        <option
                          value="test-component-id-2"
                        >
                          test-component-id-2
                        </option>
                        <option
                          value="test-component-id-3"
                        >
                          test-component-id-3
                        </option>
                      </select>
                      <!---->
                      <!---->
                      <!---->
                    </div>
                  </div>
                </p>
              </div>
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
     
    <div
      class="card my-3"
    >
      <!---->
      <!---->
      <div
        class="card-body"
      >
        <h4
          class="card-title"
        >
          4 Cross Functional Requirements
        </h4>
        <!---->
        <p
          class="card-text"
        >
          <table
            class="table table-dark"
          >
            <thead>
              <tr>
                <th
                  class="component"
                >
                  Component
                </th>
                 
                <th
                  class="teams"
                >
                  Teams
                </th>
                 
                <th
                  class="description"
                >
                  Description
                </th>
                 
                <th
                  class="notes"
                >
                  Notes
                </th>
                 
                <th
                  class="links"
                >
                  Links
                </th>
              </tr>
            </thead>
             
            <tbody>
              <tr>
                <td
                  class="component table-primary"
                >
                  <a
                    href="/components/test-component-id-1"
                  >
                    Test Component Name 1
                  </a>
                </td>
                 
                <td
                  class="teams"
                >
                  <ul>
                    <li>
                      <a
                        class="team-name"
                        href="/teams/test-team-id-1-1"
                      >
                        test-team-id-1-1
                      </a>
                       
                      <!---->
                       
                      <!---->
                    </li>
                    <li>
                      <a
                        class="team-name"
                        href="/teams/test-team-id-1-2"
                      >
                        test-team-id-1-2
                      </a>
                       
                      <!---->
                       
                      <!---->
                    </li>
                  </ul>
                </td>
                 
                <td
                  class="description"
                >
                  <div>
                    

                    <p>
                      Test CFR Description 1 1
                    </p>
                  </div>
                </td>
                 
                <td
                  class="notes"
                >
                  <div>
                    

                    <p>
                      Test CFR Notes 1 1
                    </p>
                  </div>
                </td>
                 
                <td
                  class="links"
                >
                  <ul>
                    <li>
                      <a
                        href="https://example.com/test-cfr-link-1-1-1"
                        target="_blank"
                      >
                        https://example.com/test-cfr-link-1-1-1
                      </a>
                       
                      <br />
                       
                      <div>
                        

                        <p>
                          Test CFR Link Description 1 1 1
                        </p>
                      </div>
                    </li>
                    <li>
                      <a
                        href="https://example.com/test-cfr-link-1-1-2"
                        target="_blank"
                      >
                        https://example.com/test-cfr-link-1-1-2
                      </a>
                       
                      <br />
                       
                      <div>
                        

                        <p>
                          Test CFR Link Description 1 1 2
                        </p>
                      </div>
                    </li>
                  </ul>
                </td>
              </tr>
              <tr>
                <td
                  class="component table-primary"
                >
                  <a
                    href="/components/test-component-id-1"
                  >
                    Test Component Name 1
                  </a>
                </td>
                 
                <td
                  class="teams"
                >
                  <ul>
                    <li>
                      <a
                        class="team-name"
                        href="/teams/test-team-id-1-1"
                      >
                        test-team-id-1-1
                      </a>
                       
                      <!---->
                       
                      <!---->
                    </li>
                    <li>
                      <a
                        class="team-name"
                        href="/teams/test-team-id-1-2"
                      >
                        test-team-id-1-2
                      </a>
                       
                      <!---->
                       
                      <!---->
                    </li>
                  </ul>
                </td>
                 
                <td
                  class="description"
                >
                  <div>
                    

                    <p>
                      Test CFR Description 1 2
                    </p>
                  </div>
                </td>
                 
                <td
                  class="notes"
                >
                  <div>
                    

                    <p>
                      Test CFR Notes 1 2
                    </p>
                  </div>
                </td>
                 
                <td
                  class="links"
                >
                  <ul>
                    <li>
                      <a
                        href="https://example.com/test-cfr-link-1-2-1"
                        target="_blank"
                      >
                        https://example.com/test-cfr-link-1-2-1
                      </a>
                       
                      <br />
                       
                      <div>
                        

                        <p>
                          Test CFR Link Description 1 2 1
                        </p>
                      </div>
                    </li>
                    <li>
                      <a
                        href="https://example.com/test-cfr-link-1-2-2"
                        target="_blank"
                      >
                        https://example.com/test-cfr-link-1-2-2
                      </a>
                       
                      <br />
                       
                      <div>
                        

                        <p>
                          Test CFR Link Description 1 2 2
                        </p>
                      </div>
                    </li>
                  </ul>
                </td>
              </tr>
              <tr>
                <td
                  class="component table-primary"
                >
                  <a
                    href="/components/test-component-id-3"
                  >
                    Test Component Name 3
                  </a>
                </td>
                 
                <td
                  class="teams"
                >
                  <ul>
                    <li>
                      <a
                        class="team-name"
                        href="/teams/test-team-id-3-1"
                      >
                        test-team-id-3-1
                      </a>
                       
                      <!---->
                       
                      <!---->
                    </li>
                    <li>
                      <a
                        class="team-name"
                        href="/teams/test-team-id-3-2"
                      >
                        test-team-id-3-2
                      </a>
                       
                      <!---->
                       
                      <!---->
                    </li>
                  </ul>
                </td>
                 
                <td
                  class="description"
                >
                  <div>
                    

                    <p>
                      Test CFR Description 3 1
                    </p>
                  </div>
                </td>
                 
                <td
                  class="notes"
                >
                  <div>
                    

                    <p>
                      Test CFR Notes 3 1
                    </p>
                  </div>
                </td>
                 
                <td
                  class="links"
                >
                  <ul>
                    <li>
                      <a
                        href="https://example.com/test-cfr-link-3-1-1"
                        target="_blank"
                      >
                        https://example.com/test-cfr-link-3-1-1
                      </a>
                       
                      <br />
                       
                      <div>
                        

                        <p>
                          Test CFR Link Description 3 1 1
                        </p>
                      </div>
                    </li>
                    <li>
                      <a
                        href="https://example.com/test-cfr-link-3-1-2"
                        target="_blank"
                      >
                        https://example.com/test-cfr-link-3-1-2
                      </a>
                       
                      <br />
                       
                      <div>
                        

                        <p>
                          Test CFR Link Description 3 1 2
                        </p>
                      </div>
                    </li>
                  </ul>
                </td>
              </tr>
              <tr>
                <td
                  class="component table-primary"
                >
                  <a
                    href="/components/test-component-id-3"
                  >
                    Test Component Name 3
                  </a>
                </td>
                 
                <td
                  class="teams"
                >
                  <ul>
                    <li>
                      <a
                        class="team-name"
                        href="/teams/test-team-id-3-1"
                      >
                        test-team-id-3-1
                      </a>
                       
                      <!---->
                       
                      <!---->
                    </li>
                    <li>
                      <a
                        class="team-name"
                        href="/teams/test-team-id-3-2"
                      >
                        test-team-id-3-2
                      </a>
                       
                      <!---->
                       
                      <!---->
                    </li>
                  </ul>
                </td>
                 
                <td
                  class="description"
                >
                  <div>
                    

                    <p>
                      Test CFR Description 3 2
                    </p>
                  </div>
                </td>
                 
                <td
                  class="notes"
                >
                  <div>
                    

                    <p>
                      Test CFR Notes 3 2
                    </p>
                  </div>
                </td>
                 
                <td
                  class="links"
                >
                  <ul>
                    <li>
                      <a
                        href="https://example.com/test-cfr-link-3-2-1"
                        target="_blank"
                      >
                        https://example.com/test-cfr-link-3-2-1
                      </a>
                       
                      <br />
                       
                      <div>
                        

                        <p>
                          Test CFR Link Description 3 2 1
                        </p>
                      </div>
                    </li>
                    <li>
                      <a
                        href="https://example.com/test-cfr-link-3-2-2"
                        target="_blank"
                      >
                        https://example.com/test-cfr-link-3-2-2
                      </a>
                       
                      <br />
                       
                      <div>
                        

                        <p>
                          Test CFR Link Description 3 2 2
                        </p>
                      </div>
                    </li>
                  </ul>
                </td>
              </tr>
            </tbody>
          </table>
        </p>
      </div>
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`Index when Get Team service endpoint returns a team when the team has components but the components have no cross functional requirements renders no cross functional requirements 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    
    Test Team Name 1 Team - Cross Functional Requirements
  
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1"
      target="_self"
    >
      Info
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/dependencies"
      target="_self"
    >
      Dependencies
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/components"
      target="_self"
    >
      Components
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/tech-debts"
      target="_self"
    >
      Tech Debts
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/tests"
      target="_self"
    >
      Tests
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/errors"
      target="_self"
    >
      Errors
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/openapi-specs"
      target="_self"
    >
      OpenAPI Specs
    </a>
  </div>
   
  <div>
    <div
      class="mt-3 mb-4"
    >
      <button
        aria-controls="filters"
        aria-expanded="false"
        class="btn btn-secondary collapsed"
        id="toggle-filters"
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="blank"
          class="bi-blank b-icon bi"
          fill="currentColor"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g />
        </svg>
         Filters
  
      </button>
       
      <transition-stub
        class="mt-3"
        css="true"
        enteractiveclass="collapsing"
        enterclass=""
        entertoclass="collapse show"
        leaveactiveclass="collapsing"
        leaveclass="collapse show"
        leavetoclass="collapse"
      >
        <div
          class="collapse"
          id="filters"
          style="display: none;"
        >
          <div
            class="card-columns"
          >
             
            <!---->
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <p
                  class="card-text"
                >
                  <fieldset
                    class="form-group"
                    id="__BVID__51"
                  >
                    <legend
                      class="bv-no-focus-ring col-form-label pt-0"
                      id="__BVID__51__BV_label_"
                      tabindex="-1"
                    >
                      Teams
                    </legend>
                    <div>
                      <div
                        class="bv-no-focus-ring"
                        id="__BVID__52"
                        role="group"
                        tabindex="-1"
                      >
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__52_BV_option_0"
                            name="team"
                            type="checkbox"
                            value="test-team-id-1-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__52_BV_option_0"
                          >
                            <span>
                              test-team-id-1-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__52_BV_option_1"
                            name="team"
                            type="checkbox"
                            value="test-team-id-1-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__52_BV_option_1"
                          >
                            <span>
                              test-team-id-1-2
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__52_BV_option_2"
                            name="team"
                            type="checkbox"
                            value="test-team-id-2-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__52_BV_option_2"
                          >
                            <span>
                              test-team-id-2-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__52_BV_option_3"
                            name="team"
                            type="checkbox"
                            value="test-team-id-2-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__52_BV_option_3"
                          >
                            <span>
                              test-team-id-2-2
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__52_BV_option_4"
                            name="team"
                            type="checkbox"
                            value="test-team-id-3-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__52_BV_option_4"
                          >
                            <span>
                              test-team-id-3-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__52_BV_option_5"
                            name="team"
                            type="checkbox"
                            value="test-team-id-3-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__52_BV_option_5"
                          >
                            <span>
                              test-team-id-3-2
                            </span>
                          </label>
                        </div>
                      </div>
                      <!---->
                      <!---->
                      <!---->
                    </div>
                  </fieldset>
                </p>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <p
                  class="card-text"
                >
                  <fieldset
                    class="form-group"
                    id="__BVID__59"
                  >
                    <legend
                      class="bv-no-focus-ring col-form-label pt-0"
                      id="__BVID__59__BV_label_"
                      tabindex="-1"
                    >
                      Tags
                    </legend>
                    <div>
                      <div
                        class="bv-no-focus-ring"
                        id="__BVID__60"
                        role="group"
                        tabindex="-1"
                      >
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__60_BV_option_0"
                            name="tag"
                            type="checkbox"
                            value="test-tag-1-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__60_BV_option_0"
                          >
                            <span>
                              test-tag-1-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__60_BV_option_1"
                            name="tag"
                            type="checkbox"
                            value="test-tag-1-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__60_BV_option_1"
                          >
                            <span>
                              test-tag-1-2
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__60_BV_option_2"
                            name="tag"
                            type="checkbox"
                            value="test-tag-2-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__60_BV_option_2"
                          >
                            <span>
                              test-tag-2-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__60_BV_option_3"
                            name="tag"
                            type="checkbox"
                            value="test-tag-2-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__60_BV_option_3"
                          >
                            <span>
                              test-tag-2-2
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__60_BV_option_4"
                            name="tag"
                            type="checkbox"
                            value="test-tag-3-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__60_BV_option_4"
                          >
                            <span>
                              test-tag-3-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__60_BV_option_5"
                            name="tag"
                            type="checkbox"
                            value="test-tag-3-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__60_BV_option_5"
                          >
                            <span>
                              test-tag-3-2
                            </span>
                          </label>
                        </div>
                      </div>
                      <!---->
                      <!---->
                      <!---->
                    </div>
                  </fieldset>
                </p>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <p
                  class="card-text"
                >
                  <fieldset
                    class="form-group"
                    id="__BVID__67"
                  >
                    <legend
                      class="bv-no-focus-ring col-form-label pt-0"
                      id="__BVID__67__BV_label_"
                      tabindex="-1"
                    >
                      Component Types
                    </legend>
                    <div>
                      <div
                        class="bv-no-focus-ring"
                        id="__BVID__68"
                        role="group"
                        tabindex="-1"
                      >
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__68_BV_option_0"
                            name="componentTypeId"
                            type="checkbox"
                            value="test-component-type-id-1"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__68_BV_option_0"
                          >
                            <span>
                              test-component-type-id-1
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__68_BV_option_1"
                            name="componentTypeId"
                            type="checkbox"
                            value="test-component-type-id-2"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__68_BV_option_1"
                          >
                            <span>
                              test-component-type-id-2
                            </span>
                          </label>
                        </div>
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__68_BV_option_2"
                            name="componentTypeId"
                            type="checkbox"
                            value="test-component-type-id-3"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__68_BV_option_2"
                          >
                            <span>
                              test-component-type-id-3
                            </span>
                          </label>
                        </div>
                      </div>
                      <!---->
                      <!---->
                      <!---->
                    </div>
                  </fieldset>
                </p>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <p
                  class="card-text"
                >
                  <fieldset
                    class="form-group"
                    id="__BVID__72"
                  >
                    <legend
                      class="bv-no-focus-ring col-form-label pt-0"
                      id="__BVID__72__BV_label_"
                      tabindex="-1"
                    >
                      Platforms
                    </legend>
                    <div>
                      <div
                        class="bv-no-focus-ring"
                        id="__BVID__73"
                        role="group"
                        tabindex="-1"
                      >
                        <div
                          class="custom-control custom-checkbox"
                        >
                          <input
                            class="custom-control-input"
                            id="__BVID__73_BV_option_0"
                            name="platformId"
                            type="checkbox"
                            value="undefined"
                          />
                          <label
                            class="custom-control-label"
                            for="__BVID__73_BV_option_0"
                          >
                            <span>
                              undefined
                            </span>
                          </label>
                        </div>
                      </div>
                      <!---->
                      <!---->
                      <!---->
                    </div>
                  </fieldset>
                </p>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <p
                  class="card-text"
                >
                  <div
                    class="form-group"
                    id="__BVID__75"
                    role="group"
                  >
                    <label
                      class="d-block"
                      for="component-filter"
                      id="__BVID__75__BV_label_"
                    >
                      Component
                    </label>
                    <div>
                      <select
                        class="custom-select custom-select-sm"
                        id="component-filter"
                      >
                        <option
                          value=""
                        >
                          Please select a component
                        </option>
                        <option
                          value="test-component-id-1"
                        >
                          test-component-id-1
                        </option>
                        <option
                          value="test-component-id-2"
                        >
                          test-component-id-2
                        </option>
                        <option
                          value="test-component-id-3"
                        >
                          test-component-id-3
                        </option>
                      </select>
                      <!---->
                      <!---->
                      <!---->
                    </div>
                  </div>
                </p>
              </div>
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
     
    <div
      class="card my-3"
    >
      <!---->
      <!---->
      <div
        class="card-body"
      >
        <h4
          class="card-title"
        >
          0 Cross Functional Requirements
        </h4>
        <!---->
        <p
          class="card-text"
        >
          <!---->
        </p>
      </div>
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`Index when Get Team service endpoint returns a team when the team has no components renders no cross functional requirements 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    
    Test Team Name 1 Team - Cross Functional Requirements
  
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1"
      target="_self"
    >
      Info
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/dependencies"
      target="_self"
    >
      Dependencies
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/components"
      target="_self"
    >
      Components
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/tech-debts"
      target="_self"
    >
      Tech Debts
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/tests"
      target="_self"
    >
      Tests
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/errors"
      target="_self"
    >
      Errors
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/teams/test-team-id-1/openapi-specs"
      target="_self"
    >
      OpenAPI Specs
    </a>
  </div>
   
  <div>
    <!---->
     
    <div
      class="card my-3"
    >
      <!---->
      <!---->
      <div
        class="card-body"
      >
        <h4
          class="card-title"
        >
          0 Cross Functional Requirements
        </h4>
        <!---->
        <p
          class="card-text"
        >
          <!---->
        </p>
      </div>
      <!---->
      <!---->
    </div>
  </div>
</div>
`;
